[package]
name = "image_render"
version = "0.1.0"
authors = ["Riley Quinn <merileyquinn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.1"
terminal_size = "0.1.11"
clap = "2.33.0"
regex = "1.3.6"